--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,10 @@ a {
   color: #39add1;
   font-weight: 700;
   }
-  a:hover {
+
+  a:hover,
+  .nav-svg:hover {
+    fill: #111;
     color: #111;
     transition: .4s;
   }
@@ -39,10 +42,12 @@ header {
     padding-bottom: 50px;
     text-align: left;
   }
+
   header nav ul li {
     display: inline-block;
     margin-right: 20px;
   }
+
   header h1 {
     line-height: 1em;
   }
@@ -84,54 +89,8 @@ footer {
   color: #ba8058;
 }
 
-/* Keyframes
-==================================== */
-
-@keyframes scale-elipse {
-  0% {
-    transform: scale(0);
-  }
-
-  30% {
-    transform: scale(1.2);
-  }
-
-  60% {
-    transform: scale(1);
-  }
-}
-
-@keyframes draw-text {
-  100% {
-    stroke-dashoffset: 0;
-  }
-}
-
-@keyframes fill {
-  100% {
-    fill: #F4C6A6;
-  }
-}
-
 /* SVG Styles
 ==================================== */
-
-#site-logo * {
-  transform-origin: 50% 50%;
-}
-
-.logo-bg {
-  animation: scale-elipse .7s ease-out backwards;
-}
-
-.paw-print path {
-  fill: transparent;
-  stroke: #F4C6A6;
-  stroke-width: 3;
-  stroke-dasharray: 140;
-  stroke-dashoffset: 140;
-  animation: draw-text 1s .4s linear forwards, fill .8s 1.2s forwards;
-}
 
 svg {
   width: 215px;
@@ -143,46 +102,46 @@ nav svg {
   width: 13px;
 }
 
-nav .st0 {
+.nav-svg {
   fill: #39add1;
 }
 
 /* Coat Colors */
 .snout{
-  fill:#FBFEFF;
+  fill: #FBFEFF;
 }
 
 .eyes-nose{
-  fill:#2D3339;
+  fill: #2D3339;
 }
 
 .red-fur,
 .sable-brows,
 .black-tan-brows {
-  fill:#BA8058;
+  fill: #BA8058;
 }
 
 .red-brows,
 .fawn-fur {
-  fill:#EAAA7F;
+  fill: #EAAA7F;
 }
 
   /* Fawn */
 
   .fawn-brows {
-    fill:#F4C6A6;
+    fill: #F4C6A6;
   }
 
   /* Sable */
 
   .sable-fur {
-    fill:#844B24;
+    fill: #844B24;
   }
 
   /* Black and Tan */
 
 	.black-tan-fur {
-    fill:#52595F;
+    fill: #52595F;
   }
 
 /* Media Queries
